INTERLOK-3748 Overwrite the tests with those from the primary branch and modified where necessary to pass without using destinations.